# charity

./: .gitignore  README.md  manage.py  pyproject.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
backend/: pyproject.toml
backend/accounts/: serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/charities/: serializers.py  views.py
backend/charities/migrations/: 0001_initial.py
charities/: models.py
charities/migrations/: 0001_initial.py
charity/: urls.py
frontend/: package-lock.json
old-backend/about_us/: views.py
old-backend/about_us/templates/: about_us.html
old-backend/accounts/: models.py
old-backend/charities/: apps.py  models.py
tests/: testsample.py
