[tool.poetry]
name = "charity"
version = "0.1.0"
description = ""
authors = ["AliAkbar Badri"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "*"
black = "*"
psycopg2-binary = "*"
django-debug-toolbar = "*"
djangorestframework = "*"
tzdata = "*"
drf-nested-routers = "*"
django-filter = "*"
bs4 = "*"
django-cors-headers = "*"
coverage = "*"
asyncio = "*"
aiofiles = "*"
pillow = "*"

[[tool.poetry.source]]
name = "private"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
